# TI-83Emulator

./: pyproject.toml
src/: cpu.py  main.py  ram.py  registers.py  singleton.py  stack.py
src/instructions/: base.py
src/ports/: keyboard.py  outs.py  screen.py
src/rom/: rom.py
